--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/react": "^25.0.0",
+    "@ag-grid-enterprise/all-modules": "^25.0.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "ag-grid-community": "^25.0.0",
+    "ag-grid-enterprise": "^25.0.0",
+    "ag-grid-react": "^25.0.0",
+    "plotly.js": "^1.58.4",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "antd": "^4.10.2",
+    "@ant-design/icons": "^4.3.0",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.14",
+    "react-plotly.js": "^2.5.1",
+    "react-resize-panel": "^0.3.5",
     "react-scripts": "4.0.1",
+    "react-tradingview-widget": "^1.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
