--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-plotly.js": "^2.5.1",
     "react-resize-panel": "^0.3.5",
     "react-scripts": "^4.0.1",
+    "react-toastify": "^7.0.3",
     "react-tradingview-widget": "^1.3.2"
   },
   "scripts": {
