--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ag-grid-community": "^25.1.0",
     "ag-grid-react": "^25.1.0",
     "antd": "^4.14.1",
+    "lodash": "^4.17.21",
     "react-scripts": "^4.0.3",
     "plotly.js": "^1.58.4",
     "prop-types": "^15.7.2",
